# tfmap

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docs.yml
configs/: default.toml
notebooks/: example.ipynb
src/tfmap/: __init__.py  __main__.py
tests/: test_atlus.py
