[project]
name = "tfmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brandon T. P. Saint-John", email = "saint-john@lbl.gov" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tfmap = "tfmap.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
